5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1815_2572.log
== TEST (2019-06-08 22:24:43) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = (n, dtype=int)

print(z)
-- ERROR:
File "XXXX", line 10
    z = (n, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 22:24:45) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = (n, dtype=int)

print(z)
-- EXECUTION TIME:
0.820965
-- ERROR:
  File "/home/codebench/codes/1815/2572/main.py", line 10
    z = (n, dtype=int)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:26:20) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = (n, dtype=int)

print(z)
-- ERROR:
File "XXXX", line 10
    z = (n, dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:26:51) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:29:43) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)

for p in v:
	if (p%2 == 0):
		for a in range(size(Z)):
		z[a] = p
		
print(z)
-- ERROR:
File "XXXX", line 15
    z[a] = p
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:30:07) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)

for p in v:
	if (p%2 == 0):
		for a in range(size(Z)):
			z[a] = p
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:30:24) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)

for p in v:
	if (p%2 == 0):
		for a in range(size(z)):
			z[a] = p
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:30:52) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)

for p in v:
	if (p%2 == 0):
		for a in range(size(z)):
			z[a] = p
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:31:51) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)

for p in v:
	if (p%2 == 0):
		while (a < size(z)):
			z[a] = p
			a = a + 1
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:32:11) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)

for p in v:
	if (p%2 == 0):
		a = 0
		while (a < size(z)):
			z[a] = p
			a = a + 1
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:32:57) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)

for p in v:
	if (p%2 == 0):
		a = 0
		while (a < z[a]):
			z[a] = p
			a = a + 1
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:33:03) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in v:
	if (i%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)

for p in v:
	if (p%2 == 0):
		a = 0
		while (a < z[a]):
			z[a] = p
			a = a + 1
		
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:36:59) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in range(size(v)):
	if (v[i]%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)
for i in range(size(v)):
	if (v[i]%2 == 0):
		for p in range(n):
			z[p] = v[i]

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:38:47) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in range(size(v)):
	if (v[i]%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)
for i in range(size(v)):
	if (v[i]%2 == 0):
		s = 0
		z[s] = v[i]
		s = s + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:39:06) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in range(size(v)):
	if (v[i]%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)
for i in range(size(v)):
	s = 0
	if (v[i]%2 == 0):
		
		z[s] = v[i]
		s = s + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:39:07) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in range(size(v)):
	if (v[i]%2 == 0):
		n = n + 1
		
z = zeros(n, dtype=int)
for i in range(size(v)):
	s = 0
	if (v[i]%2 == 0):
		
		z[s] = v[i]
		s = s + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:39:55) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in range(size(v)):
	if (v[i]%2 == 0):
		n = n + 1
		
s = 0
z = zeros(n, dtype=int)
for i in range(size(v)):
	if (v[i]%2 == 0):
		z[s] = v[i]
		s = s + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 22:40:05) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in range(size(v)):
	if (v[i]%2 == 0):
		n = n + 1
		
s = 0
z = zeros(n, dtype=int)
for i in range(size(v)):
	if (v[i]%2 == 0):
		z[s] = v[i]
		s = s + 1

print(z)
-- EXECUTION TIME:
1.09657
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[76546316 75713658 70356874]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[13017594 57417542 85024758 29584192]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[74902746 23742046]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:40:22) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in range(size(v)):
	if (v[i]%2 == 0):
		n = n + 1
		
s = 0
z = zeros(n, dtype=int)
for i in range(size(v)):
	if (v[i]%2 == 0):
		z[s] = v[i]
		s = s + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 22:41:15) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in range(size(v)):
	if (v[i]%2 != 0):
		n = n + 1
		
s = 0
z = zeros(n, dtype=int)
for i in range(size(v)):
	if (v[i]%2 != 0):
		z[s] = v[i]
		s = s + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 22:41:25) 
-- CODE:
from numpy import *

v = array(eval(input("Matriculas: ")), dtype=int)
n = 0

for i in range(size(v)):
	if (v[i]%2 != 0):
		n = n + 1
		
s = 0
z = zeros(n, dtype=int)
for i in range(size(v)):
	if (v[i]%2 != 0):
		z[s] = v[i]
		s = s + 1

print(z)
-- EXECUTION TIME:
1.19412
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
